# lennysroundtable

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh  sync_transcripts.py
roundtable/: __init__.py  app.py  generator.py  ingest.py  parser.py  retriever.py  verify.py
